<resources>
    <string name="app_name">PhysioCare</string>
    <string name="diagnostico">Diagnóstico: Lumbalgia</string>
    <string name="fisio">Fisio: Miguel</string>
    <string name="login">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="logout">Logout</string>

    <string name="accept">OK</string>
    <string name="no_data">No hay información disponible</string>
    <string name="physio_name_full">Fisioterapeuta: %1$s %2$s</string>
    <string name="no_internet">No hay internet</string>
    <string name="cancel">Cancelar</string>
    <string name="not_logged">No hay sesión iniciada</string>
    <string name="closed_session">Sesión Cerrada</string>
    <string name="no_appointments">No hay citas disponibles</string>
    <string name="select_physio">Asigna Fisioterapeuta</string>

    <string name="appointment_date">Fecha:</string>
    <string name="diagnosis">Diagnóstico:</string>
    <string name="treatment">Tratamiento:</string>
    <string name="observations">Observaciones:</string>
    <string name="physio_id">ID del fisioterapeuta:</string>

    <string name="formatted_date">Fecha: %1$s</string>
    <string name="diagnosis_full">Diagnóstico: %1$s</string>
    <string name="treatment_full">Tratamiento: %1$s</string>
    <string name="observations_full">Observaciones: %1$s</string>
    <string name="physio_id_full">Fisioterapeuta: %1$s</string>

</resources>